# billiards2D

./: Ball.cpp  Ball.h  CMakeLists.txt  Hole.cpp  Hole.h  README.md  Stick.cpp  Stick.h  Table.cpp  Table.h  main.cpp
